# numpy-minmax

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  packaging.md  pyproject.toml  pytest.ini  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yml
numpy_minmax/: __init__.py  _minmax.c  _minmax_cffi.py
scripts/: perf_benchmark.py
tests/: test_minmax.py
